cmake_minimum_required(VERSION 3.10)
project(atcoder)

set(CMAKE_CXX_STANDARD 14)

add_executable(atcoder main.cpp)

# subdirectory
# ABC
#add_subdirectory(ABC_003)
#add_subdirectory(ABC_004)
#add_subdirectory(ABC_005)
#add_subdirectory(ABC_006)
#add_subdirectory(ABC_008)
#add_subdirectory(ABC_029)
#add_subdirectory(ABC_042)
#add_subdirectory(ABC_049)
#add_subdirectory(ABC_059)
#add_subdirectory(ABC_061)
#add_subdirectory(ABC_072)
#add_subdirectory(ABC_073)
#add_subdirectory(ABC_074)
#add_subdirectory(ABC_077)
#add_subdirectory(ABC_078)
#add_subdirectory(ABC_086)
#add_subdirectory(ABC_088)
#add_subdirectory(ABC_093)
#add_subdirectory(ABC_109)
#add_subdirectory(ABC_110)
#add_subdirectory(ABC_112)
#add_subdirectory(ABC_113)
#add_subdirectory(ABC_114)
#add_subdirectory(ABC_115)
#add_subdirectory(ABC_116)
#add_subdirectory(ABC_117)
#add_subdirectory(ABC_118)

# ARC

# AGC
#add_subdirectory(AGC_001)
#add_subdirectory(AGC_002)
#add_subdirectory(AGC_003)
#add_subdirectory(AGC_004)
#add_subdirectory(AGC_005)
#add_subdirectory(AGC_006)
#add_subdirectory(AGC_007)
#add_subdirectory(AGC_008)
#add_subdirectory(AGC_009)
#add_subdirectory(AGC_010)
#add_subdirectory(AGC_011)
#add_subdirectory(AGC_013)
#add_subdirectory(AGC_014)
#add_subdirectory(AGC_015)
#add_subdirectory(AGC_016)
#add_subdirectory(AGC_020)
add_subdirectory(AGC_021)
add_subdirectory(AGC_023)

# company
#add_subdirectory(nikkei_procon_2019)
#add_subdirectory(minpro_2019)

# others
#add_subdirectory(library)
add_subdirectory(ukunya)
add_subdirectory(test_code)
