cmake_minimum_required(VERSION 3.1)
project(AGC_016)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++14)

add_executable(AGC016_A AGC016_A.cpp)
add_executable(AGC016_B AGC016_B.cpp)
add_executable(AGC016_C AGC016_C.cpp)
add_executable(AGC016_D AGC016_D.cpp)
add_executable(AGC016_E AGC016_E.cpp)
add_executable(AGC016_F AGC016_F.cpp)
